--- a/share_handler/pubspec.yaml
+++ b/share_handler/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # share_handler_android: ^0.0.10
   share_handler_android:
     path: ../share_handler_android
-  share_handler_ios: ^0.0.15
+  share_handler_ios:
+    path: ../share_handler_ios
   # share_handler_ios:
   #   path: ../share_handler_ios
   # share_handler_linux:
